adding client id

--- a/collaborativecrosswords/templates/index.html
+++ b/collaborativecrosswords/templates/index.html
@@ -22,7 +22,7 @@
       <button id="auth_button">Authorize</button>
     </main>
     <script>
-      var clientId = 'INSERT CLIENT ID HERE';
+      var clientId = '141267084417-m8l9apdbma5dp9ig17fe054u6k5f3lg3.apps.googleusercontent.com';
 
       if (!/^([0-9])$/.test(clientId[0])) {
         alert('Invalid Client ID - did you forget to insert your application Client ID?');
